<resources>
    <string name="app_name">mytummyisgrowling</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_yelp_request">Yelp Request</string>


    <string name="title_activity_main">mytummyisgrowling</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_result_list">Results </string>
    <string name="title_activity_result_details">ResultDetailsActivity</string>

    <string name="title_activity_register">Register</string>
    <string name="register_enter_username">Enter Email</string>
    <string name="register_enter_username_hint">(Min. 6 characters)</string>
    <string name="register_username_taken">Sorry, that username is taken.</string>
    <string name="register_username_available">That username is available.</string>
    <string name="register_enter_password">Enter Password</string>
    <string name="register_enter_password_hint">(Min. 8 character)</string>
    <string name="register_password_mismatch">These passwords do not match.</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_credentials_next_button">Next</string>

    <string name="title_activity_edit_preferences">Edit Preferences</string>
    <string name="edit_preferences_no_preferences_text">You have no cuisine preferences.\nAdd some below.</string>
    <string name="edit_preferences_sub_title_text">You can set a maximum of 10 preferences.</string>
    <string name="edit_preferences_max_pref_error_text">You can not have more than 10 preferences.</string>
    <string name="edit_preferences_skip_button">Skip\n>></string>
    <string name="edit_preferences_save_changes_button">Save Changes\n>></string>
    <string name="edit_preferences_discard_changes_button">Discard Changes\n>></string>

    <string name="title_activity_group_select">Group Select</string>

    <string name="group_select_create_group_button">Create Group</string>
    <string name="group_select_join_group_button">Join Group</string>
    <string name="group_select_view_group_details_button">View Group Details</string>

    <string name="title_activity_group_details">Group Details</string>
    <string name="group_details_use_group_button">Use this Group</string>

    <string name="title_activity_create_group">Create Group</string>
    <string name="create_group_enter_name">Enter a group name</string>
    <string name="create_group_enter_name_hint">(Min. 6 characters)</string>
    <string name="create_group_enter_pass">Enter a password</string>
    <string name="create_group_enter_pass_hint">(Min. 8 characters)</string>
    <string name="create_group_confirm_pass">Confirm password</string>

    <string name="title_activity_join_group">Join Group</string>
    <string name="join_group_enter_idString">Enter Group Id</string>
    <string name="join_group_idString_not_exist">Group Id does not exist.</string>
    <string name="join_group_pass_incorrect">Password is incorrect.</string>

    <string name="title_activity_maps_from_list">Maps</string>
    <string name="title_activity_account_settings">Account Settings</string>
    <string name="title_activity_search">My Tummy is Growling</string>
    <string name="title_activity_eat_alone">Eat Alone</string>


</resources>

