<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/blurryicecream"
    tools:context="comp4920.mytummyisgrowling.CreateGroup"
    android:gravity="center_vertical">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText android:id="@+id/create_group_enter_name"
            android:layout_width="@dimen/register_edit_text_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxLength="@integer/register_username_max_char_limit"
            android:singleLine="true"
            android:hint="@string/create_group_enter_name"
            />

        <!-- <EditText android:id="@+id/register_test"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />-->
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="@dimen/register_edit_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="start">

        <TextView android:id="@+id/create_group_name_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/register_hint_left_margin"
            android:text="@string/create_group_enter_name_hint"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText android:id="@+id/create_group_enter_pass"
            android:layout_width="@dimen/register_edit_text_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/register_enter_password"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="@dimen/register_edit_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="start">

        <TextView android:id="@+id/create_group_pass_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/register_hint_left_margin"
            android:text="@string/register_enter_password_hint"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText android:id="@+id/create_group_confirm_pass"
            android:layout_width="@dimen/register_edit_text_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/register_confirm_password"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        android:layout_width="@dimen/register_edit_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="end">

        <Button android:id="@+id/create_group_button"
            android:layout_height="75dp"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:clickable="false"
            android:background="@drawable/creategrouprobotosmall"
            android:enabled="false"
            android:onClick="createGroup"/>
    </RelativeLayout>
</LinearLayout>