<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/blurryicecream"
    tools:context="comp4920.mytummyisgrowling.Register">

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView android:id="@+id/logo"
            android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="200dp"
            android:layout_centerHorizontal="true"
        android:background="@drawable/croppedsmallerlogo"/> </RelativeLayout>



    <LinearLayout android:id="@+id/register_layout_username"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText android:id="@+id/register_enter_username"
            android:layout_width="@dimen/register_edit_text_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxLength="@integer/register_username_max_char_limit"
            android:singleLine="true"
            android:hint="@string/register_enter_username"
            />

        <!-- <EditText android:id="@+id/register_test"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />-->
    </LinearLayout>

    <LinearLayout android:id="@+id/register_layout_username_hint"
        android:orientation="horizontal"
        android:layout_width="@dimen/register_edit_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="start">

        <TextView android:id="@+id/register_username_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/register_hint_left_margin"
            android:text="@string/register_enter_password_hint"
            />
    </LinearLayout>

    <LinearLayout android:id="@+id/register_layout_password"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText android:id="@+id/register_enter_password"
            android:layout_width="@dimen/register_edit_text_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/register_enter_password"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/register_layout_password_hint"
        android:orientation="horizontal"
        android:layout_width="@dimen/register_edit_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="start">

        <TextView android:id="@+id/register_password_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/register_hint_left_margin"
            android:text="@string/register_enter_password_hint"
            />
    </LinearLayout>

    <LinearLayout android:id="@+id/register_layout_confirm_password"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText android:id="@+id/register_confirm_password"
            android:layout_width="@dimen/register_edit_text_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/register_confirm_password"/>
    </LinearLayout>

    <RelativeLayout android:id="@+id/register_layout_button"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="@dimen/register_edit_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="end">

        <Button android:id="@+id/register_credentials_next_button"
            android:layout_height="75dp"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:clickable="false"
            android:background="@drawable/register"
            android:enabled="false"
            android:onClick="acceptCredentials"/>
    </RelativeLayout>
</LinearLayout>
